[gd_scene load_steps=18 format=2]

[ext_resource path="res://DefaultTiles.tres" type="TileSet" id=1]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://GameLogic.gd" type="Script" id=3]
[ext_resource path="res://assets/targeter.png" type="Texture" id=4]
[ext_resource path="res://LevelScene.gd" type="Script" id=5]
[ext_resource path="res://BackgroundFlash.gd" type="Script" id=6]
[ext_resource path="res://assets/star.png" type="Texture" id=7]
[ext_resource path="res://assets/tutorial_arrows/DownArrow.tres" type="Texture" id=8]
[ext_resource path="res://assets/tutorial_arrows/LeftArrow.tres" type="Texture" id=9]
[ext_resource path="res://assets/tutorial_arrows/RightArrow.tres" type="Texture" id=10]
[ext_resource path="res://assets/background_darker.png" type="Texture" id=11]
[ext_resource path="res://rippleshader.tres" type="Material" id=12]
[ext_resource path="res://Shade.gd" type="Script" id=36]
[ext_resource path="res://assets/checkerboard.png" type="Texture" id=37]
[ext_resource path="res://StarSprite.gd" type="Script" id=38]
[ext_resource path="res://standardfont.tres" type="DynamicFont" id=39]
[ext_resource path="res://OutlinedLabel.gd" type="Script" id=40]

[node name="LevelScene" type="Node2D"]
script = ExtResource( 5 )

[node name="BackgroundDarker" type="Sprite" parent="."]
texture = ExtResource( 11 )
centered = false
offset = Vector2( -16, -16 )

[node name="ColorRect" type="ColorRect" parent="BackgroundDarker"]
material = ExtResource( 12 )
margin_right = 512.0
margin_bottom = 300.0
color = Color( 1, 1, 1, 0 )

[node name="BackgroundFlash" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Checkerboard" type="TextureRect" parent="."]
visible = false
margin_right = 223.0
margin_bottom = 174.0
texture = ExtResource( 37 )
stretch_mode = 2

[node name="UnderTerrainFolder" type="Node2D" parent="."]

[node name="LevelFolder" type="Node2D" parent="."]

[node name="TerrainMap" type="TileMap" parent="LevelFolder"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 327687, 1, 0, 393222, 0, 196613, 393223, 0, 524292, 393224, 18, 3, 393225, 18, 4, 458759, 0, 262145, 458760, 18, 65539, 458761, 18, 917510, 458762, 18, 4, 524295, 0, 655362, 524296, 0, 196614, 524297, 0, 196614, 524298, 0, 196615 )

[node name="UnderActorsParticles" type="Node2D" parent="."]

[node name="ActorsFolder" type="Node2D" parent="."]

[node name="OverActorsParticles" type="Node2D" parent="."]

[node name="Targeter" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.8 )
position = Vector2( -28, -30 )
texture = ExtResource( 4 )
offset = Vector2( 14, 14 )

[node name="GameLogic" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Shade" type="Node2D" parent="."]
script = ExtResource( 36 )

[node name="LevelLabel" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Level 01 - Blah Blah Blah"
align = 1
valign = 1

[node name="LevelStar" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.167, 0.167 )
texture = ExtResource( 7 )
centered = false
script = ExtResource( 38 )

[node name="MenuButton" type="Button" parent="."]
margin_left = 226.0
margin_top = 284.0
margin_right = 286.0
margin_bottom = 299.0
theme = ExtResource( 2 )
text = "Menu (Esc)"

[node name="ReplayButtons" type="Node2D" parent="."]
visible = false

[node name="ReplayTurn" type="Node2D" parent="ReplayButtons"]

[node name="PrevTurnButton" type="Button" parent="ReplayButtons/ReplayTurn"]
margin_left = 141.0
margin_top = 263.0
margin_right = 162.0
margin_bottom = 285.0
theme = ExtResource( 2 )
text = "<"

[node name="PauseButton" type="Button" parent="ReplayButtons/ReplayTurn"]
margin_left = 168.0
margin_top = 263.0
margin_right = 189.0
margin_bottom = 285.0
theme = ExtResource( 2 )
text = "||"

[node name="NextTurnButton" type="Button" parent="ReplayButtons/ReplayTurn"]
margin_left = 195.0
margin_top = 263.0
margin_right = 216.0
margin_bottom = 285.0
theme = ExtResource( 2 )
text = ">"

[node name="ReplayTurnLabel" type="Label" parent="ReplayButtons/ReplayTurn"]
margin_left = 141.0
margin_top = 286.0
margin_right = 217.0
margin_bottom = 300.0
theme = ExtResource( 2 )
text = "Turn: 999/999"
align = 1

[node name="ReplayTurnSlider" type="HSlider" parent="ReplayButtons/ReplayTurn"]
margin_left = 141.0
margin_top = 245.0
margin_right = 215.0
margin_bottom = 261.0
theme = ExtResource( 2 )

[node name="ReplaySpeed" type="Node2D" parent="ReplayButtons"]

[node name="ReplaySpeedLabel" type="Label" parent="ReplayButtons/ReplaySpeed"]
margin_left = 292.0
margin_top = 286.0
margin_right = 368.0
margin_bottom = 300.0
theme = ExtResource( 2 )
text = "Speed: 0.50s"
align = 1

[node name="ReplaySpeedSlider" type="HSlider" parent="ReplayButtons/ReplaySpeed"]
margin_left = 289.0
margin_top = 245.0
margin_right = 363.0
margin_bottom = 261.0
theme = ExtResource( 2 )
value = 50.0

[node name="F9Button" type="Button" parent="ReplayButtons/ReplaySpeed"]
margin_left = 294.0
margin_top = 263.0
margin_right = 315.0
margin_bottom = 285.0
theme = ExtResource( 2 )
text = "<<"

[node name="F10Button" type="Button" parent="ReplayButtons/ReplaySpeed"]
margin_left = 337.0
margin_top = 263.0
margin_right = 359.0
margin_bottom = 285.0
theme = ExtResource( 2 )
text = ">>"

[node name="VirtualButtons" type="Node2D" parent="."]
visible = false

[node name="Verbs" type="Node2D" parent="VirtualButtons"]

[node name="UndoButton" type="Button" parent="VirtualButtons/Verbs"]
margin_left = 8.0
margin_top = 273.0
margin_right = 29.0
margin_bottom = 295.0
theme = ExtResource( 2 )
text = "Z"

[node name="Dirs" type="Node2D" parent="VirtualButtons"]

[node name="LeftButton" type="Button" parent="VirtualButtons/Dirs"]
margin_left = 406.0
margin_top = 273.0
margin_right = 428.0
margin_bottom = 295.0
theme = ExtResource( 2 )
text = "<"

[node name="DownButton" type="Button" parent="VirtualButtons/Dirs"]
margin_left = 434.0
margin_top = 273.0
margin_right = 456.0
margin_bottom = 295.0
theme = ExtResource( 2 )
text = "v"

[node name="RightButton" type="Button" parent="VirtualButtons/Dirs"]
margin_left = 462.0
margin_top = 273.0
margin_right = 484.0
margin_bottom = 295.0
theme = ExtResource( 2 )
text = ">"

[node name="UpButton" type="Button" parent="VirtualButtons/Dirs"]
margin_left = 434.0
margin_top = 246.0
margin_right = 456.0
margin_bottom = 268.0
theme = ExtResource( 2 )
text = "^"

[node name="Others" type="Node2D" parent="VirtualButtons"]

[node name="EnterButton" type="Button" parent="VirtualButtons/Others"]
margin_left = 234.0
margin_top = 256.0
margin_right = 277.0
margin_bottom = 271.0
theme = ExtResource( 2 )
text = "Enter"

[node name="DownArrow" type="Sprite" parent="."]
visible = false
position = Vector2( -48, -48 )
texture = ExtResource( 8 )
centered = false

[node name="LeftArrow" type="Sprite" parent="."]
visible = false
position = Vector2( -48, -48 )
texture = ExtResource( 9 )
centered = false

[node name="RightArrow" type="Sprite" parent="."]
visible = false
position = Vector2( -48, -48 )
texture = ExtResource( 10 )
centered = false

[node name="WinLabel" type="Node2D" parent="."]
visible = false
script = ExtResource( 40 )

[node name="TutorialLabel" type="RichTextLabel" parent="."]
margin_left = 1.0
margin_top = 69.0
margin_right = 513.0
margin_bottom = 229.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0.756863, 0.756863, 0.823529, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/normal_font = ExtResource( 39 )
bbcode_enabled = true
bbcode_text = "[center]Arrows: Move Character
X: Swap Character
Z: Undo Character[/center]"
text = "Arrows: Move Character
X: Swap Character
Z: Undo Character"

[node name="MetaInfoLabel" type="Label" parent="."]
margin_top = 271.0
margin_right = 511.0
margin_bottom = 285.0
theme = ExtResource( 2 )
text = "Meta"
align = 1
valign = 1
